force-app/main/default/objects/Fleet__c/Fleet__c.object-meta.xml
<CustomObject>
    <label>Fleet</label>
    <nameField>
        <label>Fleet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>