force-app/main/default/objects/Fleet__c/fields/Active_Quantity_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Active_Quantity_Competitor__c</fullName>
    <label>Active Quantity (Competitor)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>