force-app/main/default/objects/Fleet__c/fields/Active_Quantity_GILLIG__c.field-meta.xml
<CustomField>
    <fullName>Active_Quantity_GILLIG__c</fullName>
    <label>Active Quantity (GILLIG)</label>
    <summaryFilterItems>
        <field>Bus__c.Retired__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Bus__c.Fleet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>