force-app/main/default/objects/Fleet__c/fields/Competitor_Date_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Date_Delivered__c</fullName>
    <label>Date Delivered</label>
    <type>Date</type>
</CustomField>