force-app/main/default/objects/Fleet__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>if( RecordType.Name =&quot;Competitor&quot;, Length_Competitor__c, if(isblank( Sales_Order__c ), &quot;TBD&quot;,text( Sales_Order__r.Length__c )))</formula>
    <label>Length</label>
    <type>Text</type>
</CustomField>