force-app/main/default/objects/Fleet__c/fields/Length_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Length_Competitor__c</fullName>
    <label>Length (Competitor)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>