force-app/main/default/objects/Fleet__c/fields/Length_GILLIG__c.field-meta.xml
<CustomField>
    <fullName>Length_GILLIG__c</fullName>
    <label>Length (GILLIG)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>