force-app/main/default/objects/Fleet__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>DIESEL</fullName>
            </value>
            <value>
                <fullName>ELECTRIC</fullName>
            </value>
            <value>
                <fullName>HYBRID ALLISON</fullName>
            </value>
            <value>
                <fullName>HYBRID BAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>