force-app/main/default/objects/Fleet__c/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retired</label>
    <type>Checkbox</type>
</CustomField>