force-app/main/default/objects/Fleet__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Fleet</relationshipLabel>
    <relationshipName>Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>