force-app/main/default/objects/Fleet__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <formula>if( RecordType.Name =&quot;Competitor&quot;,Style_Competitor__c,if(isblank( Sales_Order__c ),&quot;TBD&quot;,text( Sales_Order__r.Style__c )))</formula>
    <label>Style</label>
    <type>Text</type>
</CustomField>