force-app/main/default/objects/Fleet__c/fields/Style_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Style_Competitor__c</fullName>
    <label>Style (Competitor)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>