force-app/main/default/objects/Fleet__c/fields/Style_GILLIG__c.field-meta.xml
<CustomField>
    <fullName>Style_GILLIG__c</fullName>
    <label>Style (GILLIG)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Floor</fullName>
            </value>
            <value>
                <fullName>Low Floor BRT</fullName>
            </value>
            <value>
                <fullName>BRTPLUS</fullName>
            </value>
            <value>
                <fullName>Trolley</fullName>
            </value>
            <value>
                <fullName>Low Floor Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>