force-app/main/default/objects/Fleet__c/fields/Year_Start__c.field-meta.xml
<CustomField>
    <fullName>Year_Start__c</fullName>
    <formula>IF(RecordType.Name = &apos;Competitor&apos;, text(YEAR( Competitor_Date_Delivered__c )), text(YEAR(Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>