force-app/main/default/objects/Fleet__c/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <description>Fleet information for Competitor Fleets</description>
    <label>Competitor</label>
</RecordType>