force-app/main/default/objects/Fleet__c/recordTypes/GILLIG.recordType-meta.xml
<RecordType>
    <fullName>GILLIG</fullName>
    <active>true</active>
    <description>Gillig Fleet Data</description>
    <label>GILLIG</label>
</RecordType>