force-app/main/default/objects/Fleet__c/recordTypes/Merged.recordType-meta.xml
<RecordType>
    <fullName>Merged</fullName>
    <active>true</active>
    <description>Fleets that are only visible to System admin and IT</description>
    <label>Merged</label>
</RecordType>