force-app/main/default/objects/Fleet__c/recordTypes/Planned_Build.recordType-meta.xml
<RecordType>
    <fullName>Planned_Build</fullName>
    <active>true</active>
    <description>Fleet that has not had a bus delivered</description>
    <label>Planned Build</label>
</RecordType>